Add deployment tool

--- a/app/index.html
+++ b/app/index.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-        <title>Archimed test React/Redux application</title>
+        <title>React/Redux application for calculation of alcohol consumption</title>
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,300italic,400,400italic,500">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,500">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <div class="archimed-layout mdl-layout mdl-js-layout">
             <header class="mdl-layout__header mdl-layout__header--transparent">
                 <div class="mdl-layout__header-row">
-                    <span class="mdl-layout-title">Archimed</span>
+                    <span class="mdl-layout-title">Traugott</span>
                 </div>
             </header>
             <main class="mdl-layout__content">
